# basicformer

./: .gitignore  COPYING  README.md  pyproject.toml
src/basicformer/: __init__.py  config_basicformer.py  modeling_basicformer.py
tests/: generate-raw.py
